--- a/index.html
+++ b/index.html
@@ -155,5 +155,6 @@
       </div>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="module" src="dashboard.js"></script>
 </body>
 </html>
