--- a/quiz.html
+++ b/quiz.html
@@ -4,10 +4,16 @@
   <title>Quiz App</title>
   <link rel="stylesheet" href="style.css">
   <style>
+    .quiz-header-bar {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 20px;
+      margin-bottom: 10px;
+      position: relative;
+      z-index: 2;
+    }
     .quiz-timer {
-      position: absolute;
-      top: 20px;
-      right: 20px;
       width: 100px;
       height: 100px;
       border-radius: 50%;
@@ -18,6 +24,8 @@
       font-weight: bold;
       color: #333;
       font-size: 1.2em;
+      margin: 0 auto 10px auto;
+      position: static;
     }
     #result {
       font-size: 1.3em;
@@ -78,6 +86,7 @@
       margin-bottom: 20px;
       margin-top: 10px;
       flex-wrap: wrap;
+      z-index: 1;
     }
     .quiz-index-dot {
       width: 28px;
@@ -113,8 +122,10 @@
 <body>
   <div id="loading">Checking authentication...</div>
   <div class="app" style="display:none; position: relative;">
-    <div class="quiz-timer" id="quizTimer">--:--</div>
-    <div class="quiz-index-bar" id="quizIndexBar"></div>
+    <div class="quiz-header-bar">
+      <div class="quiz-timer" id="quizTimer">--:--</div>
+      <div class="quiz-index-bar" id="quizIndexBar"></div>
+    </div>
     <div class="quiz">
       <h2 id="question">Question will appear here</h2>
       <div id="answer-buttons"></div>
@@ -142,8 +153,6 @@
         window.currentUser = user;
         document.getElementById('loading').style.display = 'none';
         document.querySelector('.app').style.display = 'block';
-
-        // Call the global initQuiz() defined below
         initQuiz();
       }
     });
@@ -154,7 +163,7 @@
     let questions = [];
     let currentIndex = 0;
     let score = 0;
-    const quizDuration = 600; // 10 minutes
+    let quizDuration = 600; // Will be set dynamically
     let timerInterval;
     let questionStatus = []; // "not", "attempted", "skipped"
     let quizEnded = false;
@@ -189,6 +198,9 @@
         if (!Array.isArray(questions) || questions.length === 0) {
           throw new Error("No questions found in JSON");
         }
+
+        // Set quiz duration dynamically: 30 seconds per question
+        quizDuration = questions.length * 30;
 
         questionStatus = Array(questions.length).fill("not");
         showQuestion();
