--- a/dashboard.html
+++ b/dashboard.html
@@ -167,6 +167,7 @@
         <button class="btn btn-outline-primary manual-btn" data-manual="store">8. Store Manual</button>
         <button class="btn btn-outline-primary manual-btn" data-manual="account">9. Account Manual</button>
         <button class="btn btn-outline-primary manual-btn" data-manual="pyq2022">10. PYQ 30% Main 2022</button>
+        <button class="btn btn-outline-primary manual-btn" data-manual="pyq2021">11. PYQ 30% Main 2021</button>
       </div>
     </section>
   </main>
