--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
         <button class="btn btn-outline-primary manual-btn" data-manual="store">8. Store Manual</button>
         <button class="btn btn-outline-primary manual-btn" data-manual="account">9. Account Manual</button>
         <button class="btn btn-outline-primary manual-btn" data-manual="pyq2022">10. PYQ 30% Main 2022</button>
+     <button class="btn btn-outline-primary manual-btn" data-manual="pyq2021">11. PYQ 30% Main 2021</button>
       </div>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
