--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 </head>
 <body>
   <!-- HEADER START -->
+  <!-- In HEADER START section -->
+<button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" 
+        data-bs-target="#mainNavbar" aria-controls="mainNavbar">
+  <span class="navbar-toggler-icon"></span> <!-- Use Bootstrap's default icon -->
+</button>
   <header class="site-header">
     <div class="bg-warning py-2">
       <div class="container-fluid d-flex justify-content-between align-items-center px-3">
